--- a/.github/workflows/update_dataset_repos.yml
+++ b/.github/workflows/update_dataset_repos.yml
@@ -18,9 +18,8 @@ jobs:
       - name: Get upstream changes
         run: |
           git remote add upstream https://github.com/neurodatascience/mini_proc.git
-          git fetch upstream main:upstream-main
+          git pull upstream main
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v4
         with:
-          token: ${{ secrets.PAT }}
           branch: upstream-changes
