--- a/.github/workflows/update_dataset_repos.yml
+++ b/.github/workflows/update_dataset_repos.yml
@@ -22,5 +22,6 @@ jobs:
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v4
         with:
+          title: Update to match `neurodatascience/mr_proc:main`
           token: ${{ secrets.PAT }}
           branch: upstream-changes
