--- a/.github/workflows/update_dataset_repos.yml
+++ b/.github/workflows/update_dataset_repos.yml
@@ -13,22 +13,24 @@ jobs:
           - neurodatascience/mini_proc-qpn
     steps:
       - uses: actions/checkout@v3
-      - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v4
-        with:
-          push-to-fork: ${{ matrix.fork }}
-          title: Update to match `neurodatascience/mr_proc:main`
-          token: ${{ secrets.PAT }}
-          branch: upstream-changes
-#         with:
-#           repository: ${{ matrix.fork }}
-#       - name: Get upstream changes
-#         run: |
-#           git remote add upstream https://github.com/neurodatascience/mini_proc.git
-#           git pull upstream main
 #       - name: Create Pull Request
 #         uses: peter-evans/create-pull-request@v4
 #         with:
+#           push-to-fork: ${{ matrix.fork }}
 #           title: Update to match `neurodatascience/mr_proc:main`
 #           token: ${{ secrets.PAT }}
 #           branch: upstream-changes
+        with:
+          repository: ${{ matrix.fork }}
+      - name: Get upstream changes
+        run: |
+          git checkout -b upstream-changes
+          git pull --rebase --set-upstream https://github.com/neurodatascience/mini_proc.git
+#           git remote add upstream https://github.com/neurodatascience/mini_proc.git
+#           git pull upstream main
+      - name: Create Pull Request
+        uses: peter-evans/create-pull-request@v4
+        with:
+          title: Update to match `neurodatascience/mr_proc:main`
+          token: ${{ secrets.PAT }}
+          branch: upstream-changes
