Try example with reset --hard

--- a/.github/workflows/update_dataset_repos.yml
+++ b/.github/workflows/update_dataset_repos.yml
@@ -24,7 +24,11 @@ jobs:
           repository: ${{ matrix.fork }}
       - name: Get upstream changes
         run: |
-          git pull --rebase --set-upstream https://github.com/neurodatascience/mini_proc.git
+          git remote add upstream https://github.com/neurodatascience/mini_proc.git
+          git fetch upstream main:upstream-main
+          git reset --hard upstream-main
+#         run: |
+#           git pull --rebase --set-upstream https://github.com/neurodatascience/mini_proc.git
 #           git remote add upstream https://github.com/neurodatascience/mini_proc.git
 #           git pull upstream main
       - name: Create Pull Request
