--- a/.github/workflows/update_dataset_repos.yml
+++ b/.github/workflows/update_dataset_repos.yml
@@ -24,5 +24,5 @@ jobs:
         uses: peter-evans/create-pull-request@v4
         with:
           title: Update to match `neurodatascience/mr_proc:main`
-          token: ${{ secrets.PAT }}
+          token: ${{ secrets.GITHUB_TOKEN }}
           branch: upstream-changes
