--- a/.github/workflows/update_dataset_repos.yml
+++ b/.github/workflows/update_dataset_repos.yml
@@ -19,7 +19,7 @@ jobs:
         run: |
           git remote add upstream https://github.com/neurodatascience/mini_proc.git
           git fetch upstream main:upstream-main
-          git reset --hard upstream-main
+#           git reset --hard upstream-main
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v4
         with:
