--- a/.github/workflows/update_dataset_repos.yml
+++ b/.github/workflows/update_dataset_repos.yml
@@ -19,10 +19,11 @@ jobs:
         run: |
           git remote add upstream https://github.com/neurodatascience/mini_proc.git
           git fetch upstream main:upstream-main
-#           git reset --hard upstream-main
+          git reset --hard upstream-main
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v4
         with:
           title: Update to match `neurodatascience/mr_proc:main`
+          body: PR created by [create-pull-request](https://github.com/peter-evans/create-pull-request) GitHub action.
           token: ${{ secrets.PAT }}
           branch: upstream-changes
