try with GITHUB_TOKEN and additional permissions

--- a/.github/workflows/update_dataset_repos.yml
+++ b/.github/workflows/update_dataset_repos.yml
@@ -11,6 +11,8 @@ jobs:
         fork:
           - neurodatascience/mini_proc-ppmi
           - neurodatascience/mini_proc-qpn
+    permissions:
+      pull-requests: write
     steps:
       - uses: actions/checkout@v3
         with:
@@ -26,12 +28,12 @@ jobs:
         with:
           title: Update to match `neurodatascience/mr_proc:main`
           body: PR created by [create-pull-request](https://github.com/peter-evans/create-pull-request) GitHub action.
-          token: ${{ secrets.PAT }}
+          token: ${{ secrets.GITHUB_TOKEN }}
           branch: upstream-changes
-      - name: Approve Pull Request
-        if: ${{ steps.create-pr.outputs.pull-request-number }}
-        uses: hmarr/auto-approve-action@v3
-        with:
-          pull-request-number: ${{ steps.create-pr.outputs.pull-request-number }}
-          github-token: ${{ secrets.PAT }}
+#       - name: Approve Pull Request
+#         if: ${{ steps.create-pr.outputs.pull-request-number }}
+#         uses: hmarr/auto-approve-action@v3
+#         with:
+#           pull-request-number: ${{ steps.create-pr.outputs.pull-request-number }}
+#           github-token: ${{ secrets.PAT }}
         
