add "auto-pr" label

--- a/.github/workflows/update_dataset_repos.yml
+++ b/.github/workflows/update_dataset_repos.yml
@@ -28,6 +28,7 @@ jobs:
         with:
           title: Update to match `neurodatascience/mr_proc:main`
           body: PR created by [create-pull-request](https://github.com/peter-evans/create-pull-request) GitHub action.
+          labels: auto-pr
           token: ${{ secrets.PAT }}
           branch: upstream-changes
 #       - name: Approve Pull Request
