--- a/.github/workflows/update_dataset_repos.yml
+++ b/.github/workflows/update_dataset_repos.yml
@@ -31,10 +31,11 @@ jobs:
           labels: auto-pr
           token: ${{ secrets.PAT }}
           branch: upstream-changes
-#       - name: Approve Pull Request
-#         if: ${{ steps.create-pr.outputs.pull-request-number }}
-#         uses: hmarr/auto-approve-action@v3
-#         with:
-#           pull-request-number: ${{ steps.create-pr.outputs.pull-request-number }}
-#           github-token: ${{ secrets.PAT }}
+      - name: Approve Pull Request
+        if: ${{ steps.create-pr.outputs.pull-request-number }}
+        uses: michellewang/auto-approve-action@v3
+        with:
+          pull-request-number: ${{ steps.create-pr.outputs.pull-request-number }}
+          review-message: Auto-approve
+          github-token: ${{ secrets.PAT }}
         
