--- a/.github/workflows/update_dataset_repos.yml
+++ b/.github/workflows/update_dataset_repos.yml
@@ -35,6 +35,7 @@ jobs:
         if: ${{ steps.create-pr.outputs.pull-request-number }}
         uses: michellewang/auto-approve-action@v3
         with:
+          repository: ${{ matrix.fork }}
           pull-request-number: ${{ steps.create-pr.outputs.pull-request-number }}
           review-message: Auto-approved by GitHub action.
           github-token: ${{ secrets.PAT }}
