--- a/.github/workflows/update_dataset_repos.yml
+++ b/.github/workflows/update_dataset_repos.yml
@@ -33,10 +33,15 @@ jobs:
           branch: upstream-changes
       - name: Approve Pull Request
         if: ${{ steps.create-pr.outputs.pull-request-number }}
-        uses: michellewang/auto-approve-action@v3
+        uses: juliangruber/approve-pull-request-action@v2.0.0
         with:
-          repository: ${{ matrix.fork }}
-          pull-request-number: ${{ steps.create-pr.outputs.pull-request-number }}
-          review-message: Auto-approved by GitHub action.
-          github-token: ${{ secrets.PAT }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          number: ${{ steps.create-pr.outputs.pull-request-number }}
+          repo: ${{ matrix.fork }}
+#         uses: michellewang/auto-approve-action@v3
+#         with:
+#           repository: ${{ matrix.fork }}
+#           pull-request-number: ${{ steps.create-pr.outputs.pull-request-number }}
+#           review-message: Auto-approved by GitHub action.
+#           github-token: ${{ secrets.PAT }}
         
