--- a/.github/workflows/update_dataset_repos.yml
+++ b/.github/workflows/update_dataset_repos.yml
@@ -35,7 +35,7 @@ jobs:
         if: ${{ steps.create-pr.outputs.pull-request-number }}
         uses: juliangruber/approve-pull-request-action@v2.0.0
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.PAT }}
           number: ${{ steps.create-pr.outputs.pull-request-number }}
           repo: ${{ matrix.fork }}
 #         uses: michellewang/auto-approve-action@v3
