--- a/.github/workflows/update_dataset_repos.yml
+++ b/.github/workflows/update_dataset_repos.yml
@@ -41,7 +41,8 @@ jobs:
         if: ${{ steps.step-create.outputs.pull-request-number }}
         uses: pascalgn/automerge-action@v0.15.6
         env:
-          GITHUB_TOKEN: ${{ secrets.PAT }}
+#           GITHUB_TOKEN: ${{ secrets.PAT }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           MERGE_LABELS: automerge
           MERGE_METHOD: merge
           MERGE_COMMIT_MESSAGE: pull-request-title
