--- a/.github/workflows/update_dataset_repos.yml
+++ b/.github/workflows/update_dataset_repos.yml
@@ -41,11 +41,10 @@ jobs:
         if: ${{ steps.step-create.outputs.pull-request-number }}
         uses: pascalgn/automerge-action@v0.15.6
         env:
-#           GITHUB_TOKEN: ${{ secrets.PAT }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.PAT }}
           MERGE_LABELS: automerge
           MERGE_METHOD: merge
-          MERGE_COMMIT_MESSAGE: pull-request-title
+          MERGE_COMMIT_MESSAGE: "{pullRequest.title} (#{pullRequest.number})"
           MERGE_REQUIRED_APPROVALS: 0
           MERGE_DELETE_BRANCH: false
           MERGE_ERROR_FAIL: true
