--- a/.github/workflows/update_dataset_repos.yml
+++ b/.github/workflows/update_dataset_repos.yml
@@ -40,11 +40,11 @@ jobs:
           MERGE_COMMIT_MESSAGE: "{pullRequest.title} (#{pullRequest.number})"
           MERGE_REQUIRED_APPROVALS: 0
           MERGE_DELETE_BRANCH: false
-          MERGE_ERROR_FAIL: true
+          MERGE_ERROR_FAIL: "true"
           PULL_REQUEST: ${{ matrix.fork }}/${{ steps.create-pull-request.outputs.pull-request-number }}
-      - name: Check if success
-        if: ${{ steps.automerge-pull-request.outputs.mergeResult != 'merged' }}
-        run: |
-          echo "Unable to merge pull request #${{ steps.automerge-pull-request.outputs.pullRequestNumber }}"
-          exit 1
+#       - name: Check if success
+#         if: ${{ steps.automerge-pull-request.outputs.mergeResult != 'merged' }}
+#         run: |
+#           echo "Unable to merge pull request #${{ steps.automerge-pull-request.outputs.pullRequestNumber }}"
+#           exit 1
         
