--- a/.github/workflows/update_dataset_repos.yml
+++ b/.github/workflows/update_dataset_repos.yml
@@ -30,7 +30,6 @@ jobs:
           branch: main-upstream
           labels: automerge
       - name: Automerge Pull Request
-        id: automerge-pull-request
         if: ${{ steps.create-pull-request.outputs.pull-request-number }}
         uses: pascalgn/automerge-action@v0.15.6
         env:
@@ -39,12 +38,6 @@ jobs:
           MERGE_METHOD: merge
           MERGE_COMMIT_MESSAGE: "{pullRequest.title} (#{pullRequest.number})"
           MERGE_REQUIRED_APPROVALS: 0
-          MERGE_DELETE_BRANCH: false
+          MERGE_DELETE_BRANCH: "false"
           MERGE_ERROR_FAIL: "true"
           PULL_REQUEST: ${{ matrix.fork }}/${{ steps.create-pull-request.outputs.pull-request-number }}
-#       - name: Check if success
-#         if: ${{ steps.automerge-pull-request.outputs.mergeResult != 'merged' }}
-#         run: |
-#           echo "Unable to merge pull request #${{ steps.automerge-pull-request.outputs.pullRequestNumber }}"
-#           exit 1
-        
