--- a/.github/workflows/update_dataset_repos.yml
+++ b/.github/workflows/update_dataset_repos.yml
@@ -25,10 +25,18 @@ jobs:
         uses: peter-evans/create-pull-request@v4
         with:
           title: Update to match neurodatascience/mr_proc:main
-          body: PR created/updated automatically by [create-pull-request](https://github.com/peter-evans/create-pull-request) GitHub action.
+          body: PR created/updated automatically by [create-pull-request](https://github.com/peter-evans/create-pull-request) GitHub action. Will be merged automatically by [automerge-action](https://github.com/pascalgn/automerge-action) if there are no merge conflicts.
           token: ${{ secrets.PAT }}
           branch: main-upstream
           labels: automerge
+#       - name: Approve Pull Request
+#         if: ${{ steps.create-pull-request.outputs.pull-request-number }}
+#         uses: michellewang/auto-approve-action@v3
+#         with:
+#           repository: ${{ matrix.fork }}
+#           pull-request-number: ${{ steps.create-pull-request.outputs.pull-request-number }}
+#           review-message: PR approved by [auto-approve-action](https://github.com/michellewang/auto-approve-action) GitHub action.
+#           github-token: ${{ secrets.PAT2 }}
       - name: Automerge Pull Request
         if: ${{ steps.create-pull-request.outputs.pull-request-number }}
         uses: pascalgn/automerge-action@v0.15.6
