--- a/.github/workflows/update_dataset_repos.yml
+++ b/.github/workflows/update_dataset_repos.yml
@@ -50,8 +50,9 @@ jobs:
           MERGE_ERROR_FAIL: "true"
           PULL_REQUEST: ${{ matrix.fork }}/${{ steps.create-pull-request.outputs.pull-request-number }}
       - name: Fail job if PR wasn't ready
-        if: ${{ steps.automerge-pull-request.outputs.mergeResult }} == "not_ready"
+        if: steps.automerge-pull-request.outputs.mergeResult == "not_ready"
         run: |
+          echo "${{ steps.automerge-pull-request.outputs.mergeResult }}"
           echo "Pull request #${{ steps.automerge-pull-request.outputs.pullRequestNumber }} is not ready to be merged."
           echo "If this is due to a merge conflict, fix them in neurodatascience/mr_proc or in each of neurodatascience/mr_proc-[dataset] before trying again."
           exit 1
