use single quotes

--- a/.github/workflows/update_dataset_repos.yml
+++ b/.github/workflows/update_dataset_repos.yml
@@ -50,7 +50,7 @@ jobs:
           MERGE_ERROR_FAIL: "true"
           PULL_REQUEST: ${{ matrix.fork }}/${{ steps.create-pull-request.outputs.pull-request-number }}
       - name: Fail job if PR wasn't ready
-        if: steps.automerge-pull-request.outputs.mergeResult == "not_ready"
+        if: steps.automerge-pull-request.outputs.mergeResult == 'not_ready'
         run: |
           echo "${{ steps.automerge-pull-request.outputs.mergeResult }}"
           echo "Pull request #${{ steps.automerge-pull-request.outputs.pullRequestNumber }} is not ready to be merged."
