--- a/.github/workflows/update_dataset_repos.yml
+++ b/.github/workflows/update_dataset_repos.yml
@@ -54,5 +54,4 @@ jobs:
       - name: Fail job if PR wasn't ready
         if: steps.automerge-pull-request.outputs.mergeResult == 'not_ready'
         run: |
-          core.setFailed('Pull request #${{ steps.automerge-pull-request.outputs.pullRequestNumber }} is not ready to be merged. If this is due to a merge conflict, fix them in neurodatascience/mr_proc or in each of neurodatascience/mr_proc-[dataset] before trying again.')
-          exit 1
+          core.setFailed('Pull request is not ready to be merged. If this is due to a merge conflict, fix them in neurodatascience/mr_proc or in each of neurodatascience/mr_proc-[dataset] before trying again.')
