--- a/.github/workflows/update_dataset_repos.yml
+++ b/.github/workflows/update_dataset_repos.yml
@@ -46,7 +46,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.PAT }}
           MERGE_LABELS: automerge
-          MERGE_METHOD: merge
+          MERGE_METHOD: rebase
           MERGE_COMMIT_MESSAGE: "{pullRequest.title} (#{pullRequest.number})"
           MERGE_REQUIRED_APPROVALS: 1
           MERGE_DELETE_BRANCH: "false"
